@@ -1,3 +1,4 @@
+#  git commit -c 879ae2600
 [tox]
 envlist = 
     py24,py25,py26,py27,pypy,jython,cover
@@ -14,10 +15,50 @@ deps =
     Chameleon<1.4
     WebOb<=1.0.99
     WebTest<=1.2.99
+    zope.configuration<3.8.0
+
+[testenv:py24]
+commands = 
+    python setup.py test -q
+deps =
+    Sphinx
+    repoze.sphinx.autointerface
+    virtualenv
+    PasteDeploy<1.5
+    Chameleon<1.4
+    WebOb<=1.0.99
+    WebTest<=1.2.99
+    zope.configuration<3.8.0
+    zope.schema<4.0.0
+
+[testenv:py25]
+commands = 
+    python setup.py test -q
+deps =
+    Sphinx
+    repoze.sphinx.autointerface
+    virtualenv
+    PasteDeploy<1.5
+    Chameleon<1.4
+    WebOb<=1.0.99
+    WebTest<=1.2.99
+    zope.configuration<3.8.0
+    zope.schema<4.0.0
 
 [testenv:jython]
 commands = 
-   jython setup.py test -q
+    jython setup.py test -q
+deps =
+    Sphinx
+    docutils<0.8
+    repoze.sphinx.autointerface
+    virtualenv
+    PasteDeploy<1.5
+    Chameleon<1.4
+    WebOb<=1.0.99
+    WebTest<=1.2.99
+    zope.configuration<3.8.0
+    zope.schema<4.0.0
 
 [testenv:cover]
 basepython =
@@ -33,6 +74,7 @@ deps =
     Chameleon<1.4
     WebOb<=1.0.99
     WebTest<=1.2.99
+    zope.configuration<3.8.0
     nose
     coverage==3.4
     nosexcover
@@ -40,4 +82,3 @@ deps =
 # we separate coverage into its own testenv because a) "last run wins" wrt
 # cobertura jenkins reporting and b) pypy and jython can't handle any
 # combination of versions of coverage and nosexcover that i can find.
-
