@@ -12,6 +12,14 @@ Backported Features
 1.0 (2011-01-30)
 ================
 
+Features
+--------
+
+- Backport the ``egg:pyramid#wsgiref`` and ``egg:pyramid#cherrypy`` server
+  runners from the 1.3 branch.  This change is to primarily allow scaffolding
+  authors to rely on the wsgiref entry point for projects that are meant to
+  work on both Pyramid 1.1.3 and 1.3.X.
+
 Documentation
 -------------
 
